--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Orbitron:wght@400..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
 
 @layer base {
   :root {
@@ -33,6 +31,11 @@ body {
     --chart-4: 43 74% 66%;
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
+    --black: #000000;
+    --dark-gray: #333333;
+    --mid-gray: #666666;
+    --light-gray: #F5F5F5;
+    --white: #FFFFFF;
   }
   .dark {
     --background: 0 0% 3.9%;
